--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
 }
