--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
