--- a/uat.env
+++ b/uat.env
@@ -1,3 +1,6 @@
 PORT=2300
 DB_URL="mongodb://localhost:27017/Authentication"
 SESSION_SECRET="A9996F13313B8A6BB7EFAA6BF3894"
+SMPT_SERVICE=gmail
+AUTHENTICATION_SMPT_MAIL="ka.ravisankar@gmail.com"
+AUTHENTICATION_SMPT_MAIL_PASSWORD="dlqlhcwgkvnerhqd"
