Integrated Google OAuth2.0

--- a/uat.env
+++ b/uat.env
@@ -4,3 +4,5 @@ SESSION_SECRET="A9996F13313B8A6BB7EFAA6BF3894"
 SMPT_SERVICE=gmail
 AUTHENTICATION_SMPT_MAIL="ka.ravisankar@gmail.com"
 AUTHENTICATION_SMPT_MAIL_PASSWORD="dlqlhcwgkvnerhqd"
+PASSPORT_GOOGLE_CLIENT_ID=578017627814-dduh0n7k2m01v7549boeum0og9e8qpf7.apps.googleusercontent.com
+PASSPORT_GOOGLE_CLIENT_SECRET="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"
